hphp/hack/test/typecheck/enum_class_label/nullable.bad.php.exp
ERROR: File "nullable.bad.php", line 18, characters 10-11:
Invalid argument (Typing[4110])
  File "nullable.bad.php", line 8, characters 35-37:
  Expected `int`
  File "nullable.bad.php", line 5, characters 3-8:
  But got `string`
ERROR: File "nullable.bad.php", line 22, characters 10-11:
Invalid argument (Typing[4110])
  File "nullable.bad.php", line 22, characters 10-11:
  Expected a class with a constant `Z`
  File "nullable.bad.php", line 8, characters 32-32:
  But got `E`
  File "nullable.bad.php", line 3, characters 12-12:
  `E` is defined here
  File "nullable.bad.php", line 4, characters 7-7:
  Did you mean `X`?
